--- a/translations/messages.fr.yaml
+++ b/translations/messages.fr.yaml
@@ -1,11 +1,9 @@
-# translations/messages.fr.yaml
-'Home': 'Accueil'
 'Welcome to our multilingual website': 'Bienvenue sur notre site multilingue'
 'This is a paragraph that will be translated': 'Ceci est un paragraphe qui sera traduit'
-'Accept all cookies': 'Accepter tous les cookies'
-'Accept only essential cookies': 'Accepter uniquement les cookies essentiels'
-'This website uses cookies': 'Ce site utilise des cookies'
-'Language': 'Langue'
-'French': 'Français'
-'English': 'Anglais'
-'Spanish': 'Espagnol'
+'Login': 'Connexion'
+'Register': 'Inscription'
+'Logout': 'Déconnexion'
+'Your account has been created successfully.': 'Votre compte a été créé avec succès.'
+'Email': 'Email'
+'Password': 'Mot de passe'
+'Agree to terms': 'Accepter les conditions'
