--- a/translations/messages.en.yaml
+++ b/translations/messages.en.yaml
@@ -1,11 +1,9 @@
-# translations/messages.en.yaml
-'Home': 'Home'
 'Welcome to our multilingual website': 'Welcome to our multilingual website'
 'This is a paragraph that will be translated': 'This is a paragraph that will be translated'
-'Accept all cookies': 'Accept all cookies'
-'Accept only essential cookies': 'Accept only essential cookies'
-'This website uses cookies': 'This website uses cookies'
-'Language': 'Language'
-'French': 'French'
-'English': 'English'
-'Spanish': 'Spanish'
+'Login': 'Login'
+'Register': 'Register'
+'Logout': 'Logout'
+'Your account has been created successfully.': 'Your account has been created successfully.'
+'Email': 'Email'
+'Password': 'Password'
+'Agree to terms': 'Agree to terms'
