--- a/translations/messages.es.yaml
+++ b/translations/messages.es.yaml
@@ -1,10 +1,9 @@
-Home: 'Inicio'
 'Welcome to our multilingual website': 'Bienvenido a nuestro sitio web multilingüe'
 'This is a paragraph that will be translated': 'Este es un párrafo que será traducido'
-'Accept all cookies': 'Aceptar todas las cookies'
-'Accept only essential cookies': 'Aceptar solo las cookies esenciales'
-'This website uses cookies': 'Este sitio web utiliza cookies'
-Language: 'Idioma'
-French: 'Francés'
-English: 'Inglés'
-Spanish: 'Español'
+'Login': 'Iniciar sesión'
+'Register': 'Registrarse'
+'Logout': 'Cerrar sesión'
+'Your account has been created successfully.': 'Su cuenta ha sido creada con éxito.'
+'Email': 'Correo electrónico'
+'Password': 'Contraseña'
+'Agree to terms': 'Aceptar los términos'
