Notification-Translation-Cookies

--- a/translations/messages.es.yaml
+++ b/translations/messages.es.yaml
@@ -7,3 +7,7 @@
 'Email': 'Correo electrónico'
 'Password': 'Contraseña'
 'Agree to terms': 'Aceptar los términos'
+'This website uses cookies': 'Este sitio web utiliza cookies'
+'Accept all cookies': 'Aceptar todas las cookies'
+'Accept only essential cookies': 'Aceptar solo las cookies esenciales'
+# ... (autres traductions existantes)
