--- a/translations/messages.fr.yaml
+++ b/translations/messages.fr.yaml
@@ -7,3 +7,7 @@
 'Email': 'Email'
 'Password': 'Mot de passe'
 'Agree to terms': 'Accepter les conditions'
+'This website uses cookies': 'Ce site utilise des cookies'
+'Accept all cookies': 'Accepter tous les cookies'
+'Accept only essential cookies': 'Accepter uniquement les cookies essentiels'
+# ... (autres traductions existantes)
