--- a/translations/messages.en.yaml
+++ b/translations/messages.en.yaml
@@ -7,3 +7,7 @@
 'Email': 'Email'
 'Password': 'Password'
 'Agree to terms': 'Agree to terms'
+'This website uses cookies': 'This website uses cookies'
+'Accept all cookies': 'Accept all cookies'
+'Accept only essential cookies': 'Accept only essential cookies'
+# ... (autres traductions existantes)
